--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Hooklearn! Your site for professional forums
-        Real and relevant questions and questions
+        Real and relevant questions and answers.
       "
     />
     
